# quarkus-bazel-gradle

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build.gradle.kts  settings.gradle.kts
src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native  Dockerfile.native-micro
src/main/kotlin/com/example/: ExampleResource.kt
src/test/kotlin/com/example/: ExampleResourceTest.kt
